--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -21,6 +21,7 @@ jobs:
           - {command: clippy, rust: stable, args: '--all-features --tests -- -D warnings', hdf5: true}
           - {command: test, rust: stable, args: '--all-features -p deep_filter', hdf5: true}
           - {command: build, rust: stable, args: '-p deep_filter', hdf5: false}
+          - {command: build, rust: "1.60", args: '-p deep_filter', hdf5: false} # pinned msrv
           - {command: build, rust: stable, args: '--all-features', hdf5: true}
           - {command: build, rust: nightly, args: '--all-features', hdf5: true}
     steps:
