--- a/.github/workflows/build_capi.yml
+++ b/.github/workflows/build_capi.yml
@@ -77,21 +77,21 @@ jobs:
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
         with:
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
+          key: ${{ matrix.target }}-cargo-${{ hashFiles('**/Cargo.toml') }}
           cache-on-failure: true
 
       - name: Install gcc-arm-linux-gnueabihf
         if: ${{ matrix.target == 'armv7-unknown-linux-gnueabihf' }}
         run: |
           mkdir .cargo
-          sudo apt-get install gcc-arm-linux-gnueabihf crossbuild-essential-armhf
+          sudo apt-get install --no-install-recommends gcc-arm-linux-gnueabihf crossbuild-essential-armhf
           echo -e "[target.${{ matrix.target }}]\nlinker=\"${{ matrix.cc }}\"\n" > .cargo/config
 
       - name: Install gcc-aarch64-linux-gnu
         if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
         run: |
           mkdir .cargo
-          sudo apt-get install gcc-aarch64-linux-gnu crossbuild-essential-arm64
+          sudo apt-get install --no-install-recommends gcc-aarch64-linux-gnu crossbuild-essential-arm64
           echo -e "[target.${{ matrix.target }}]\nlinker=\"${{ matrix.cc }}\"\n" > .cargo/config
 
       - name: Setup target
@@ -123,21 +123,27 @@ jobs:
             ${{ matrix.cinstall-args }} \
             ${{ env.TARGET_FLAGS }}
 
-      - name: List built files
-        if: ${{ runner.os != 'macos' }}
-        run: tree ${{ env.TARGET_DIR }}
-
-      - name: List built files
-        if: ${{ runner.os == 'macos' }}
-        run: find . ${{ env.TARGET_DIR }}
-
       - name: Rebuild header using the settings in cbindgen.toml
         shell: bash
         run: |
-          cbindgen --config cbindgen.toml --crate deep_filter --output ${{ env.TARGET_DIR }}/deep_filter.h
+          cbindgen --config cbindgen.toml --crate deep_filter --output ${{ env.TARGET_DIR }}/usr/local/include/deep_filter/deep_filter.h
+
+      - name: Copy to staging
+        shell: bash
+        run: |
+          mkdir staging
+          mv ${{ env.TARGET_DIR }}/usr staging
+
+      - name: List built files
+        if: ${{ runner.os != 'macos' }}
+        run: tree staging
+
+      - name: List built files
+        if: ${{ runner.os == 'macos' }}
+        run: find ./staging
 
       - uses: actions/upload-artifact@v3
         with:
           name: clib-${{ matrix.target }}
-          path: ${{ env.TARGET_DIR }}/usr
+          path: ./staging
           retention-days: 7
