--- a/.github/workflows/build_capi.yml
+++ b/.github/workflows/build_capi.yml
@@ -1,12 +1,9 @@
 name: Build C-API
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
+  schedule:
+    - cron: '0 18 * * 6'
 
 env:
   CARGO_TERM_COLOR: always
