--- a/ladspa/Cargo.toml
+++ b/ladspa/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wmidi = "3.1.0"
-deep_filter = { path = "../libDF", features = ["tract", "use-jemalloc"], default_features = false }
+deep_filter = { path = "../libDF", features = ["tract", "use-jemalloc"] }
 ladspa = "0.3.4"
 ndarray = "^0.15"
 env_logger = "0.9"
