--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -29,7 +29,7 @@ path = "src/bin/enhance_wav.rs"
 required-features = ["bin", "tract", "wav-utils", "transforms"]
 
 [features]
-default = ["default_model"]
+default = ["default_model", "vorbis", "flac"]
 
 transforms = ["dep:thiserror", "dep:ndarray", "dep:rubato"]
 dataset = [
@@ -95,7 +95,7 @@ thiserror = { version = "1.0", optional = true }
 anyhow = { version = "1.0", optional = true, features = ["backtrace"] }
 ctrlc = { version = "3.2", optional = true }
 hound = { version = "3.4", optional = true }
-hdf5 = { version = "^0.8", optional = true, git = "https://github.com/aldanor/hdf5-rust/", rev="refs/pull/216/head" }
+hdf5 = { version = "^0.8", optional = true, git = "https://github.com/aldanor/hdf5-rust/", rev = "refs/pull/216/head" }
 ndarray = { version = "^0.15", optional = true, features = ["serde"] }
 ndarray-rand = { version = "^0.14", optional = true }
 rayon = { version = "1.5", optional = true }
