--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -38,7 +38,9 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.command }}-cargo-${{ hashFiles('**/Cargo.toml') }}
       - name: Install HDF5
         if: matrix.hdf5 == true
-        run: sudo apt-get install libhdf5-dev
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install libhdf5-dev
       - name: Run cargo ${{matrix.command}}
         shell: bash
         run: |
