ci: Switch to rust nightly

--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -18,12 +18,12 @@ jobs:
       matrix:
         include:
           - {command: fmt, rust: nightly, args: '--all -- --check', hdf5: false}
-          - {command: clippy, rust: stable, args: '--all-features --tests -- -D warnings', hdf5: true}
-          - {command: test, rust: stable, args: '--all-features -p deep_filter', hdf5: true}
-          - {command: build, rust: stable, args: '-p deep_filter', hdf5: false}
-          - {command: build, rust: "1.60", args: '-p deep_filter', hdf5: false} # pinned msrv
-          - {command: build, rust: stable, args: '--all-features', hdf5: true}
+          - {command: clippy, rust: nightly, args: '--all-features --tests -- -D warnings', hdf5: true}
+          - {command: test, rust: nightly, args: '--all-features -p deep_filter', hdf5: true}
+          - {command: build, rust: nightly, args: '-p deep_filter', hdf5: false}
           - {command: build, rust: nightly, args: '--all-features', hdf5: true}
+          # - {command: build, rust: "1.60", args: '-p deep_filter', hdf5: false} # pinned msrv
+          # - {command: build, rust: nightly, args: '--all-features', hdf5: true}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
