--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -66,7 +66,7 @@ jobs:
 
       # Rust installation
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
         with:
