df: Print version without additional parameters
* enhance.py: allow version output without additional parameters

* enhance.py: update version argument parser

* test_df.yml: add test of getting version information

* enhance.py: run black

--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -128,6 +128,7 @@ jobs:
           DNS_AUTH_KEY: ${{ secrets.DNS_AUTH_KEY }}
         run: |
           mkdir ../out
+          poetry run deepFilter --version
           poetry run deepFilter ../assets/noisy_snr0.wav -o ../out
           poetry run python df/scripts/dnsmos.py ../assets/noisy_snr0.wav -t 4.320409320319172 2.53722799232174 3.209282577524924
           poetry run python df/scripts/dnsmos.py ../out/noisy_snr0_DeepFilterNet2.wav -t 4.12677460716050 4.45606916030286 3.62059268038164
