--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -66,7 +66,9 @@ jobs:
 
       # Rust installation
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nighlty
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
         with:
