--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -111,12 +111,20 @@ jobs:
 
       # Install DeepFilterNet and dependencies
       - name: Install runtime dependencies and DeepFilterNet
+        if: matrix.os != 'windows-latest'
         working-directory: DeepFilterNet
         run: |
           poetry --version
           poetry install -vvv --no-interaction -E eval -E dnsmos-local ${{env.EXTRA}}
           echo "Installing pytorch"
           poetry run poe install-torch-cpu
+      - name: Install runtime dependencies and DeepFilterNet
+        if: matrix.os = 'windows-latest'
+        working-directory: DeepFilterNet
+        run: |
+          python -m pip install torch==1.12.0 torchaudio==0.12.0 --extra-index-url https://download.pytorch.org/whl/cpu/
+          pip install -r requirements.txt
+          pip install -r requirements_test.txt
 
       # Run tests
       - name: Run DF Test
