--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -120,7 +120,7 @@ jobs:
           echo "Installing pytorch"
           poetry run poe install-torch-cpu
       - name: Install runtime dependencies and DeepFilterNet
-        if: matrix.os = 'windows-latest'
+        if: matrix.os == 'windows-latest'
         working-directory: DeepFilterNet
         run: |
           python -m pip install torch==1.12.0 torchaudio==0.12.0 --extra-index-url https://download.pytorch.org/whl/cpu/
