--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -124,8 +124,7 @@ jobs:
         working-directory: DeepFilterNet
         run: |
           python -m pip install torch==1.12.0 torchaudio==0.12.0 --extra-index-url https://download.pytorch.org/whl/cpu/
-          pip install -r requirements.txt
-          pip install -r requirements_test.txt
+          pip install -r requirements_eval.txt
 
       # Run tests
       - name: Run DF Test
