--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -31,6 +31,7 @@ loguru = ">=0.5"
 appdirs = "^1.4"
 requests = "^2.27"
 packaging = "^23.0"
+sympy = ">=1.6"
 soundfile = { version = ">=0.10,<0.13", optional = true }
 icecream = { version = ">=2,<3", optional = true }
 pystoi = { version = "^0.3", optional = true }
