--- a/.github/workflows/build_demo.yml
+++ b/.github/workflows/build_demo.yml
@@ -13,12 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: 
-          - nightly
         include:
           - os: ubuntu-latest
+            rust: nightly
           - os: macos-latest
+            rust: nightly
           - os: windows-latest
+            rust: nightly
             ext: .exe
     steps:
       - name: Checkout repository
