--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -115,7 +115,7 @@ jobs:
         working-directory: DeepFilterNet
         run: |
           poetry --version
-          poetry install -vvv --no-interaction -E eval -E dnsmos-local ${{env.EXTRA}}
+          poetry install -vvv --no-interaction -E dnsmos-local ${{env.EXTRA}}
           echo "Installing pytorch"
           poetry run poe install-torch-cpu
 
@@ -132,9 +132,13 @@ jobs:
         run: |
           mkdir ../out
           poetry run deepFilter --version
-          poetry run deepFilter ../assets/noisy_snr0.wav -o ../out
-          poetry run python df/scripts/dnsmos.py ../assets/noisy_snr0.wav -t 4.320409320319172 2.53722799232174 3.209282577524924
-          poetry run python df/scripts/dnsmos.py ../out/noisy_snr0_DeepFilterNet2.wav -t 4.12677460716050 4.45606916030286 3.62059268038164
+          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet -o ../out
+          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet2 -o ../out
+          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet3 -o ../out
+          poetry run python df/scripts/dnsmos_v5.py ../assets/noisy_snr0.wav -t 3.593157109941994, 2.6762185573926756, 2.5772815929645208, 2.9930654
+          poetry run python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet.wav -t 3.320198609916083, 3.995019883633959, 3.0340518350340058, 3.709483
+          poetry run python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet2.wav -t 3.3456805601892454, 4.095289455202942, 3.1015692702262143, 3.7800858
+          poetry run python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet3.wav -t 3.3711728515217914, 4.087029941126605, 3.118482291999213, 3.7518153
 
       - uses: actions/upload-artifact@v3
         with:
