--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -22,7 +22,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.9"]
         include:
           - os: "ubuntu-latest"
           # - os: "macos-latest"  # Fails to install hdf5 from git
@@ -73,7 +72,9 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python }}
+          cache: 'pip'
+          cache-dependency-path: '**/pyproject.toml'
+          python-version: "3.9"
       - name: Load cached Poetry installation
         if: matrix.os != 'windows-latest'
         uses: actions/cache@v3
