--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
         df_wheel: ["pyDF", "pyDF-data"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             container: quay.io/pypa/manylinux_2_24_x86_64:latest
           - os: macos-latest
@@ -88,13 +88,13 @@ jobs:
       - name: Echo git tag
         run: |
           echo "git tag: ${{github.event.head_commit.message}}"
-          echo "DF version:  $(scripts/get_version.sh)"
+          echo "DF version: $(scripts/get_version.sh)"
           echo "DF_VERSION=$(scripts/get_version.sh)" >> $GITHUB_ENV
 
       - name: Install HDF5
         if: matrix.os == 'ubuntu-latest' && matrix.df_wheel == 'pyDF-data'
         run: |
-          apt-get install -y --no-install-recommends libhdf5-dev
+          sudo apt-get install -y libhdf5-dev
 
       - name: Install Python
         if: matrix.os != 'ubuntu-latest'
@@ -353,6 +353,8 @@ jobs:
       #     asset_content_type: application/octet-stream
 
       - name: Upload release archive
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: gh release upload $GITHUB_REF ${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}
 
   build-deepfilter-ladspa:
@@ -455,4 +457,6 @@ jobs:
       #     asset_content_type: application/octet-stream
 
       - name: Upload release archive
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: gh release upload $GITHUB_REF ${{ env.TARGET_DIR }}/${{ env.DF_LADSPA_NAME }}
