--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Install HDF5
         if: runner.os == 'linux' && matrix.df_wheel == 'pyDF-data'
         run: |
-          apt-get install -y libhdf5-dev
+          apt-get update && apt-get install -y libhdf5-dev
 
       - name: Install Python
         if: runner.os != 'linux'
@@ -322,7 +322,6 @@ jobs:
           echo "target flag is: ${{ env.TARGET_FLAGS }}"
           echo "target dir is: ${{ env.TARGET_DIR }}"
           echo "DF_BIN_NAME=deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}${{ matrix.ext }}" >> $GITHUB_ENV
-          echo "GITHUB_REF is: ${GITHUB_REF}"
 
       - name: Build release binary
         run: | 
@@ -345,7 +344,7 @@ jobs:
       - name: Upload release archive
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: gh release upload ${GITHUB_REF} ${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}
+        run: gh release upload v${{ env.DF_VERSION }} ${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}
 
   build-deepfilter-ladspa:
     needs: ['create-release']
@@ -438,17 +437,7 @@ jobs:
           name: ${{ env.DF_LADSPA_NAME }}
           path: ${{ env.TARGET_DIR }}/${{ env.DF_LADSPA_NAME }}
 
-      # - name: Upload release archive
-      #   uses: actions/upload-release-asset@v1.0.2
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ needs.create-release.outputs.upload_url }}
-      #     asset_name: ${{ env.DF_LADSPA_NAME }}
-      #     asset_path: ${{ env.TARGET_DIR }}/${{ env.DF_LADSPA_NAME }}
-      #     asset_content_type: application/octet-stream
-
       - name: Upload release archive
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: gh release upload $GITHUB_REF ${{ env.TARGET_DIR }}/${{ env.DF_LADSPA_NAME }}
+        run: gh release upload v${{ env.DF_VERSION }} ${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}
