--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DeepFilterLib"
-version = "0.5.1-pre"
+version = "0.5.1"
 authors = ["Hendrik Schröter"]
 edition = "2021"
 rust-version = "1.60"
