--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deep_filter"
-version = "0.5.1"
+version = "0.5.2-pre"
 authors = ["Hendrik Schröter"]
 edition = "2021"
 description = "Noise supression using deep filtering"
