libdf: Get rid of nightly via more unsafe code

--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -18,8 +18,8 @@ jobs:
       matrix:
         include:
           - {command: fmt, rust: nightly, args: '--all -- --check', hdf5: false}
-          - {command: clippy, rust: nightly, args: '--all-features --tests -- -D warnings', hdf5: true, alsa: true}
-          - {command: test, rust: nightly, args: '--all-features -p deep_filter', hdf5: true}
+          - {command: clippy, rust: stable, args: '--all-features --tests -- -D warnings', hdf5: true, alsa: true}
+          - {command: test, rust: stable, args: '--all-features -p deep_filter', hdf5: true}
           - {command: build, rust: stable, args: '-p deep_filter', hdf5: false}
           - {command: build, rust: stable, args: '-p DeepFilterLib', hdf5: false}
           - {command: build, rust: stable, args: '-p DeepFilterDataLoader', hdf5: true}
