--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -79,6 +79,7 @@ tract = [
 ]
 default-model = []  # Include default DFN3 model
 default-model-ll = []  # Include default DFN3 low latency model
+nightly-features = []
 capi = ["tract", "default-model", "dep:ndarray"]
 hdf5-static = ["hdf5?/static"]
 
