--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -138,9 +138,9 @@ jobs:
         run: |
           mkdir ../out
           poetry run deepFilter --version
-          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet -o ../out
-          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet2 -o ../out
-          poetry run deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet3 -o ../out
+          poetry run deepFilter --no-delay-compensation ../assets/noisy_snr0.wav -m DeepFilterNet -o ../out
+          poetry run deepFilter --no-delay-compensation ../assets/noisy_snr0.wav -m DeepFilterNet2 -o ../out
+          poetry run deepFilter --no-delay-compensation ../assets/noisy_snr0.wav -m DeepFilterNet3 -o ../out
           poetry run python df/scripts/dnsmos_dns5.py eval-single ../assets/noisy_snr0.wav -t 3.604316132288559 2.682694789493083 2.58449544791776 2.981942
           poetry run python df/scripts/dnsmos_dns5.py eval-single ../out/noisy_snr0_DeepFilterNet.wav -t 3.347275035532741 4.0226200060870045 3.0721500373065647 3.6992884
           poetry run python df/scripts/dnsmos_dns5.py eval-single ../out/noisy_snr0_DeepFilterNet2.wav -t 3.356522067484457 4.094995405584476 3.1071521784172025 3.737621
