--- a/.github/workflows/test_pypi_release.yml
+++ b/.github/workflows/test_pypi_release.yml
@@ -55,10 +55,10 @@ jobs:
           deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet -o ../out
           deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet2 -o ../out
           deepFilter ../assets/noisy_snr0.wav -m DeepFilterNet3 -o ../out
-          python df/scripts/dnsmos_v5.py ../assets/noisy_snr0.wav -t 3.593157109941994, 2.6762185573926756, 2.5772815929645208, 2.9930654
-          python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet.wav -t 3.320198609916083, 3.995019883633959, 3.0340518350340058, 3.709483
-          python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet2.wav -t 3.3456805601892454, 4.095289455202942, 3.1015692702262143, 3.7800858
-          python df/scripts/dnsmos_v5.py ../out/noisy_snr0_DeepFilterNet3.wav -t 3.3711728515217914, 4.087029941126605, 3.118482291999213, 3.7518153
+          python df/scripts/dnsmos_dns5.py eval-single ../assets/noisy_snr0.wav -t 3.604316132288559 2.682694789493083 2.58449544791776 2.981942
+          python df/scripts/dnsmos_dns5.py eval-single ../out/noisy_snr0_DeepFilterNet.wav -t 3.347275035532741 4.0226200060870045 3.0721500373065647 3.6992884
+          python df/scripts/dnsmos_dns5.py eval-single ../out/noisy_snr0_DeepFilterNet2.wav -t 3.356522067484457 4.094995405584476 3.1071521784172025 3.737621
+          python df/scripts/dnsmos_dns5.py eval-single ../out/noisy_snr0_DeepFilterNet3.wav -t 3.4399468223627174 4.144957235621709 3.2074756563112996 3.7088842
       - uses: actions/upload-artifact@v3
         with:
           name: enhanced-${{ runner.os }}
