--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DeepFilterDataLoader"
-version = "0.5.2-pre"
+version = "0.5.2"
 authors = ["Hendrik Schröter"]
 edition = "2021"
 rust-version = "1.60"
